--- a/logica/index.html
+++ b/logica/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Logica</title>
-    <script defer src="app.js"></script>
+    <!--<script defer src="app.js"></script>
+    <script defer src="fizz.js"></script>-->
+    <script defer src="fizzFunction.js"></script>
+
 </head>
 <body>
     <!--User profile
