--- a/arrays/arrays/index.html
+++ b/arrays/arrays/index.html
@@ -6,8 +6,12 @@
     <title>Document</title>
     <!--
     <script defer src="resistors.js"></script>
-    -->
     <script defer src="society.js"></script>
+    <script defer src="divided.js"></script>
+    <script defer src="status.js"></script>
+     <script defer src="multiples.js"></script>
+    -->
+    <script defer src="dominance.js"></script>
 
 </head>
 <body>
