--- a/logica/index.html
+++ b/logica/index.html
@@ -4,21 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Logica</title>
+
     <!--<script defer src="app.js"></script>
-    <script defer src="fizz.js"></script>-->
+    <script defer src="fizz.js"></script>
     <script defer src="fizzFunction.js"></script>
+     <script defer src="highest.js"></script>
+     <script defer src="alarm.js"></script>
+     <script defer src="palindrome.js"></script>
+    -->
+    <script defer src="factorial.js"></script>
 
 </head>
 <body>
-    <!--User profile
-Write a program that prompts a user for their data: username, age, and a list of their favorite movies. Store the information and then showcase it in the console. Take note that the output for the films should add a small message like: 'The film {film} is one of my favorites'
-1. username, edad y una salida de peliculas favoritas
-2. utilizar los prompt necesarios para que el usuario ingrese su informacion
-3. ocupando un array vamos a almacenar las peliculas del usuario.
-4. Mostrar en conosla la informacion del usuario, donde cada pelicula debe tener un mensaje como este 
-'The film {film} is one of my favorites'
-.-->
-
-
+ 
 </body>
 </html>
